# stm32_bluepill_nohal

./: .gitignore  CMakeLists.txt  main.c
Core/Src/: printf_redirect.c
Peripherals/Inc/: gpio.h  rcc.h  uart.h
Peripherals/Src/: gpio.c  rcc.c  uart.c
